Bug 383618 - Tree view is not visible after import
Summary: Tree view is not visible after import
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.23.0 (KDE Applications 17.08.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-17 06:33 UTC by Ralf Habacker
Modified: 2017-08-17 06:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.23.1 (KDE Applications 17.08.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-08-17 06:33:48 UTC
On importing files from a directory the tree view is hided, but not made visible after the import.

How to reproduce:
1. start umbrello
2. make tree view visible 
3. select menu entry code->import from directory
4. select a directory and press okay

What happens ?
After the import the tree view is not visible

What is expected ?
If the tree view was visible before the import happens it should be made visible again.
Comment 1 Ralf Habacker 2017-08-17 06:36:08 UTC
Git commit 559917aaf24cd256fec17698e4e37277b19e957b by Ralf Habacker.
Committed on 17/08/2017 at 06:35.
Pushed by habacker into branch 'Applications/17.08'.

Fix 'Tree view is not visible after import'

Fix bug by restoring list view state after importing.

The list view has been disabled to speed up importing.

FIXED-IN:2.23.1 (KDE Applications 17.08.1)

M  +4    -0    umbrello/uml.cpp

https://commits.kde.org/umbrello/559917aaf24cd256fec17698e4e37277b19e957b