Fix 'Tree view is not visible after import'

Fix bug by restoring list view state after importing.

The list view has been disabled to speed up importing.

FIXED-IN:2.23.1 (KDE Applications 17.08.1)
BUG:383618